--- a/TestSocketConnect/Base.lproj/Main.storyboard
+++ b/TestSocketConnect/Base.lproj/Main.storyboard
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +17,123 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gUT-50-4mK">
+                                <subviews>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="127.0.0.1" borderStyle="roundedRect" placeholder="地址：" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lEW-eB-SAz">
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="Gd4-RJ-dd3"/>
+                                            <constraint firstAttribute="width" constant="148" id="QiE-eZ-D35"/>
+                                        </constraints>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="6000" borderStyle="roundedRect" placeholder="端口" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="N1k-Ch-EH8">
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="60" id="ZhT-Kf-MMJ"/>
+                                        </constraints>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                                    </textField>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="你好！" borderStyle="roundedRect" placeholder="文本：" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="aWV-gh-NaS">
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="216" id="abN-kP-KiX"/>
+                                        </constraints>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="94c-hq-8Mt">
+                                        <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="60" id="0f2-ad-3uV"/>
+                                            <constraint firstAttribute="height" constant="30" id="Yho-RO-9wn"/>
+                                        </constraints>
+                                        <state key="normal" title="连接">
+                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="connectAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="VI4-OJ-GsT"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eOy-KO-ahz">
+                                        <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="2ST-qn-uen"/>
+                                            <constraint firstAttribute="width" constant="60" id="7rr-bS-rR2"/>
+                                        </constraints>
+                                        <state key="normal" title="发送">
+                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="sendAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="wJA-Za-JVO"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="eOy-KO-ahz" secondAttribute="trailing" constant="8" id="6gQ-Hu-KOn"/>
+                                    <constraint firstItem="lEW-eB-SAz" firstAttribute="leading" secondItem="gUT-50-4mK" secondAttribute="leading" constant="8" id="9S8-Pd-axe"/>
+                                    <constraint firstAttribute="bottom" secondItem="eOy-KO-ahz" secondAttribute="bottom" constant="9" id="CRM-1b-8SC"/>
+                                    <constraint firstItem="N1k-Ch-EH8" firstAttribute="centerY" secondItem="lEW-eB-SAz" secondAttribute="centerY" id="Hlg-Vi-8Sh"/>
+                                    <constraint firstAttribute="trailing" secondItem="94c-hq-8Mt" secondAttribute="trailing" constant="8" id="Hoq-5x-vUo"/>
+                                    <constraint firstItem="lEW-eB-SAz" firstAttribute="top" secondItem="gUT-50-4mK" secondAttribute="top" constant="30" id="T8g-tM-hL0"/>
+                                    <constraint firstItem="aWV-gh-NaS" firstAttribute="leading" secondItem="gUT-50-4mK" secondAttribute="leading" constant="8" id="bNY-fh-ODW"/>
+                                    <constraint firstAttribute="bottom" secondItem="aWV-gh-NaS" secondAttribute="bottom" constant="8" id="gVn-0C-cMZ"/>
+                                    <constraint firstItem="N1k-Ch-EH8" firstAttribute="leading" secondItem="lEW-eB-SAz" secondAttribute="trailing" constant="8" id="nKW-wR-GOh"/>
+                                    <constraint firstItem="94c-hq-8Mt" firstAttribute="centerY" secondItem="N1k-Ch-EH8" secondAttribute="centerY" id="rdR-cj-Ipg"/>
+                                    <constraint firstAttribute="height" constant="120" id="tsi-Ok-ZQy"/>
+                                </constraints>
+                            </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="QNM-bl-Nkg">
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="gSb-9Z-DlK"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="Ijc-13-1rC"/>
+                                </connections>
+                            </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2Lv-eQ-hnJ">
+                                <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="GMe-Bd-o4I"/>
+                                </constraints>
+                                <state key="normal" title="断开连接">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="btnDisconnect:" destination="BYZ-38-t0r" eventType="touchUpInside" id="QGk-II-x5B"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="2Lv-eQ-hnJ" secondAttribute="bottom" id="COq-q3-kVr"/>
+                            <constraint firstAttribute="trailing" secondItem="2Lv-eQ-hnJ" secondAttribute="trailing" id="CWA-EZ-MsA"/>
+                            <constraint firstAttribute="trailing" secondItem="QNM-bl-Nkg" secondAttribute="trailing" id="Ikh-jg-jic"/>
+                            <constraint firstItem="gUT-50-4mK" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Opg-j9-eiw"/>
+                            <constraint firstItem="gUT-50-4mK" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="dCc-Jw-Khr"/>
+                            <constraint firstItem="QNM-bl-Nkg" firstAttribute="top" secondItem="gUT-50-4mK" secondAttribute="bottom" id="eBp-YI-0VU"/>
+                            <constraint firstItem="2Lv-eQ-hnJ" firstAttribute="top" secondItem="QNM-bl-Nkg" secondAttribute="bottom" id="gSD-kH-bgv"/>
+                            <constraint firstItem="2Lv-eQ-hnJ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="kLY-iH-CLp"/>
+                            <constraint firstItem="QNM-bl-Nkg" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="mMM-ZH-UZB"/>
+                            <constraint firstAttribute="trailing" secondItem="gUT-50-4mK" secondAttribute="trailing" id="tmh-Rg-uvs"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="btnConnect" destination="94c-hq-8Mt" id="8oX-mX-6tN"/>
+                        <outlet property="btnDisconnect" destination="2Lv-eQ-hnJ" id="Izy-p2-FzN"/>
+                        <outlet property="btnSend" destination="eOy-KO-ahz" id="QaD-EQ-jZP"/>
+                        <outlet property="tblMessageContent" destination="QNM-bl-Nkg" id="D1g-UR-0lw"/>
+                        <outlet property="txtAddress" destination="lEW-eB-SAz" id="pi4-SG-qRi"/>
+                        <outlet property="txtMessage" destination="aWV-gh-NaS" id="Oao-wj-M5x"/>
+                        <outlet property="txtPort" destination="N1k-Ch-EH8" id="pMc-ho-5pR"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="117.59999999999999" y="122.78860569715144"/>
         </scene>
     </scenes>
 </document>
