--- a/TestSocketConnect/Base.lproj/Main.storyboard
+++ b/TestSocketConnect/Base.lproj/Main.storyboard
@@ -19,7 +19,7 @@
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="mianTable" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="q6g-uz-Bdv">
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <view key="tableHeaderView" contentMode="scaleToFill" id="IVW-4o-sGN" customClass="MainTableHeader">
+                                <view key="tableHeaderView" contentMode="scaleToFill" id="IVW-4o-sGN">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="110"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <subviews>
@@ -57,9 +57,6 @@
                                             <state key="normal" title="上线">
                                                 <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                             </state>
-                                            <connections>
-                                                <action selector="onOffLineBtnClick:" destination="IVW-4o-sGN" eventType="touchUpInside" id="XWg-8b-U85"/>
-                                            </connections>
                                         </button>
                                     </subviews>
                                     <color key="backgroundColor" red="0.80000001190000003" green="0.80000001190000003" blue="0.80000001190000003" alpha="1" colorSpace="calibratedRGB"/>
@@ -75,12 +72,11 @@
                                         <constraint firstItem="Jfk-Ej-sNM" firstAttribute="leading" secondItem="IVW-4o-sGN" secondAttribute="leading" constant="16" id="shq-GO-mda"/>
                                         <constraint firstItem="Nq0-OJ-nw7" firstAttribute="top" secondItem="aoI-jJ-Co4" secondAttribute="bottom" constant="12" id="tbz-kZ-s7g"/>
                                     </constraints>
-                                    <connections>
-                                        <outlet property="ip" destination="Jfk-Ej-sNM" id="OIn-6I-awg"/>
-                                        <outlet property="onOffLineBtn" destination="Nq0-OJ-nw7" id="xnU-rP-PCO"/>
-                                        <outlet property="port" destination="aoI-jJ-Co4" id="feY-zW-Ump"/>
-                                        <outlet property="user" destination="7xQ-6y-1vr" id="emm-Qj-ohc"/>
-                                    </connections>
+                                </view>
+                                <view key="tableFooterView" contentMode="scaleToFill" id="yza-2q-cxf">
+                                    <rect key="frame" x="0.0" y="182" width="375" height="0.0"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </view>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="7Qx-MP-yFq">
