--- a/TestSocketConnect/ChatViewController.xib
+++ b/TestSocketConnect/ChatViewController.xib
@@ -7,6 +7,8 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ChatViewController">
             <connections>
+                <outlet property="chat" destination="9gP-IG-Q0L" id="Izg-pW-La7"/>
+                <outlet property="tableView" destination="C9m-AS-hd8" id="0x0-kl-KOn"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -19,6 +21,65 @@
                     <frame key="frameInset" width="375" height="667"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <view key="tableHeaderView" contentMode="scaleToFill" id="BlH-z0-BD5">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="124"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kfj-cy-sR8">
+                                <color key="backgroundColor" red="0.60000002384185791" green="0.40000000596046448" blue="0.20000000298023224" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="80" id="FVf-0L-Vud"/>
+                                    <constraint firstAttribute="height" constant="30" id="GId-jf-hXq"/>
+                                </constraints>
+                                <state key="normal" title="发送">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="sendBtnClick:" destination="-1" eventType="touchUpInside" id="vRr-5I-cYg"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kDu-mZ-DHQ">
+                                <color key="backgroundColor" red="0.60000002379999995" green="0.40000000600000002" blue="0.20000000300000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="80" id="9g8-pP-7ac"/>
+                                    <constraint firstAttribute="height" constant="30" id="jUu-tV-Izn"/>
+                                </constraints>
+                                <state key="normal" title="清除">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="cleanBtnClick:" destination="-1" eventType="touchUpInside" id="xP1-zy-m8p"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="你好！" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9gP-IG-Q0L">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="Pt6-K6-dFh"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
+                        <color key="backgroundColor" red="0.80000001190000003" green="0.80000001190000003" blue="0.80000001190000003" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="9gP-IG-Q0L" secondAttribute="trailing" constant="7" id="6eb-KK-uNT"/>
+                            <constraint firstItem="kDu-mZ-DHQ" firstAttribute="top" secondItem="9gP-IG-Q0L" secondAttribute="bottom" constant="20" id="8H6-M4-8jo"/>
+                            <constraint firstItem="kfj-cy-sR8" firstAttribute="top" secondItem="9gP-IG-Q0L" secondAttribute="bottom" constant="20" id="8VG-ZV-orn"/>
+                            <constraint firstItem="9gP-IG-Q0L" firstAttribute="leading" secondItem="BlH-z0-BD5" secondAttribute="leading" constant="7" id="9kM-HT-Z1j"/>
+                            <constraint firstAttribute="trailing" secondItem="kfj-cy-sR8" secondAttribute="trailing" constant="8" id="BUG-j4-6um"/>
+                            <constraint firstItem="kfj-cy-sR8" firstAttribute="leading" secondItem="kDu-mZ-DHQ" secondAttribute="trailing" constant="18" id="MS1-Z6-N2J"/>
+                            <constraint firstItem="9gP-IG-Q0L" firstAttribute="top" secondItem="BlH-z0-BD5" secondAttribute="top" constant="24" id="S7w-j1-TdK"/>
+                        </constraints>
+                    </view>
+                    <view key="tableFooterView" contentMode="scaleToFill" id="9dl-h6-iWo">
+                        <rect key="frame" x="0.0" y="667" width="375" height="0.0"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <connections>
+                        <outlet property="dataSource" destination="-1" id="eQN-KH-EW5"/>
+                        <outlet property="delegate" destination="-1" id="lPI-JV-UsC"/>
+                    </connections>
                 </tableView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
